syntax="proto3";

option java_multiple_files = true;
option java_package = "com.order.service.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 order_id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}